--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "LDSign/cake-payroll",
-    "description": "Calculate german payroll data (taxes and social insurance)",
+    "description": "Payroll plugin for CakePHP",
     "homepage": "https://github.com/LDSign/cake-payroll",
     "type": "cakephp-plugin",
     "license": "MIT",
@@ -14,7 +14,7 @@
 	},
     "require": {
         "php": ">=5.5.9",
-        "cakephp/cakephp": ">=3.3.3 <4.0.0",
+        "cakephp/cakephp": ">=3.3.2 <4.0.0"
     },
     "autoload": {
         "psr-4": {
